--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.3",
-    "sequelize": "^6.35.0"
+    "sequelize": "^6.35.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1",
